--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(BUILD_SHARED_LIBS OFF)
+option(BUILD_SHARED_LIBS "Build a shared module"  OFF)
 option(DISABLE_DBUS "Build without D-Bus support" ON)
 option(BUILD_TESTING "Build tests for ki18n" OFF)
 
