--- a/data/AndroidManifest.xml
+++ b/data/AndroidManifest.xml
@@ -33,6 +33,7 @@
                 </service>
                 <activity android:name=".SplashActivity"
                           android:label="Crumpet"
+                          android:exported="false"
                           android:theme="@android:style/Theme.Light.NoTitleBar" >
                         <intent-filter>
                               <action android:name="android.intent.action.MAIN"/>
