Set the exported attr to true to let the launcher launch on android

--- a/data/AndroidManifest.xml
+++ b/data/AndroidManifest.xml
@@ -33,7 +33,7 @@
                 </service>
                 <activity android:name=".SplashActivity"
                           android:label="Crumpet"
-                          android:exported="false"
+                          android:exported="true"
                           android:theme="@android:style/Theme.Light.NoTitleBar" >
                         <intent-filter>
                               <action android:name="android.intent.action.MAIN"/>
