Also remember to find OpenSSL if you're including it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ if(CMAKE_SYSTEM_NAME STREQUAL Android)
     add_definitions(-DANDROID)
     SET(QT_QMAKE_EXECUTABLE "$ENV{Qt5_android}/bin/qmake")
     find_package(Qt5 5.15 REQUIRED Core Gui Quick Multimedia Sensors Test Widgets QuickControls2 Svg Bluetooth RemoteObjects AndroidExtras)
+    find_package(OpenSSL REQUIRED)
 elseif(WIN32)
     message("Building for Windows - this means no dbus, and other small details. Work with that")
     add_definitions(-DWINDOWS)
