Add a couple of new bits of gear for us to support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,7 +39,9 @@ target_sources(digitail
 
     gearimplementations/GearEars.cpp
     gearimplementations/GearFake.cpp
+    gearimplementations/GearFlutterWings.cpp
     gearimplementations/GearMitail.cpp
+    gearimplementations/GearMitailMini.cpp
     gearimplementations/GearDigitail.cpp
 
     kirigami-icons.qrc
