Initial porting work for Qt6 and Frameworks 6
This is still in-progress, however, the app starts up and most things
seem to basically be working. More to be done, but this wants to not
just live on my computer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,33 +10,38 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(BREEZEICONS_DIR ${CMAKE_SOURCE_DIR}/3rdparty/breeze-icons/)
 set(DISABLE_DBUS true)
 
+set(KF_MIN_VERSION "5.240.0")
+set(QT_MIN_VERSION "6.5")
+
 include(FeatureSummary)
-find_package(ECM 5.52.0 REQUIRED CONFIG)
+find_package(ECM ${KF_MIN_VERSION} REQUIRED NO_MODULE)
 feature_summary(WHAT REQUIRED_PACKAGES_NOT_FOUND FATAL_ON_MISSING_REQUIRED_PACKAGES)
 set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
 
+include(ECMSetupVersion)
 include(KDEInstallDirs)
-include(KDECompilerSettings)
 include(KDECMakeSettings)
+include(KDECompilerSettings NO_POLICY_SCOPE)
+if (ANDROID)
+    include(ECMAddAndroidApk)
+endif ()
 
 # Android has no DBus, so we can't use that. Sniff things and tell the code
 if(CMAKE_SYSTEM_NAME STREQUAL Android)
     message("Building for Android - this means no dbus, and other small details. Work with that")
     add_definitions(-DANDROID)
-    SET(QT_QMAKE_EXECUTABLE "$ENV{Qt5_android}/bin/qmake")
-    find_package(Qt5 5.15 REQUIRED Core Gui Quick Multimedia Sensors Test Widgets QuickControls2 Svg Bluetooth RemoteObjects AndroidExtras)
+    find_package(Qt6 ${Qt_MIN_VERSION} NO_MODULE REQUIRED Core Gui Quick Multimedia Sensors Test Widgets QuickControls2 Svg Bluetooth RemoteObjects)
     find_package(OpenSSL REQUIRED)
 elseif(WIN32)
     message("Building for Windows - this means no dbus, and other small details. Work with that")
     add_definitions(-DWINDOWS)
-    find_package(Qt5 5.15 REQUIRED Core Gui Quick Multimedia Sensors Test Widgets QuickControls2 Svg Bluetooth RemoteObjects)
+    find_package(Qt6 ${Qt_MIN_VERSION} NO_MODULE REQUIRED Core Gui Quick Multimedia Sensors Test Widgets QuickControls2 Svg Bluetooth RemoteObjects)
 else()
-    find_package(Qt5 5.15 REQUIRED Core Gui Quick Multimedia Sensors Test Widgets QuickControls2 Svg Bluetooth RemoteObjects)
+    find_package(Qt6 ${Qt_MIN_VERSION} NO_MODULE REQUIRED Core Gui Quick Multimedia Sensors Test Widgets QuickControls2 Svg Bluetooth RemoteObjects)
 endif()
 
-find_package(KF5 5.52 REQUIRED I18n)
-find_package(KF5Kirigami2 2.7.0 REQUIRED)
-set_package_properties(KF5Kirigami2 PROPERTIES
+find_package(KF6 ${KF_MIN_VERSION} REQUIRED Kirigami I18n)
+set_package_properties(KF6Kirigami PROPERTIES
     DESCRIPTION "KDE's lightweight user interface framework for mobile and convergent applications"
     URL "https://techbase.kde.org/Kirigami"
     PURPOSE "Required for the main UI of the app"
