--- a/data/AndroidManifest.xml
+++ b/data/AndroidManifest.xml
@@ -13,24 +13,24 @@
                     <meta-data android:name="android.app.lib_name" android:value="digitail"/>
                     <!-- Background running -->
                     <meta-data android:name="android.app.background_running" android:value="true"/>
-                    <!-- Background running -->
-                    <meta-data android:name="android.app.qt_sources_resource_id" android:resource="@array/qt_sources"/>
+
                     <meta-data android:name="android.app.repository" android:value="default"/>
                     <meta-data android:name="android.app.qt_libs_resource_id" android:resource="@array/qt_libs"/>
                     <meta-data android:name="android.app.bundled_libs_resource_id" android:resource="@array/bundled_libs"/>
+
                     <!-- Deploy Qt libs as part of package -->
                     <meta-data android:name="android.app.bundle_local_qt_libs" android:value="-- %%BUNDLE_LOCAL_QT_LIBS%% --"/>
+                    <meta-data android:name="android.app.load_local_libs_resource_id" android:resource="@array/load_local_libs"/>
                     <!-- Run with local libs -->
                     <meta-data android:name="android.app.use_local_qt_libs" android:value="-- %%USE_LOCAL_QT_LIBS%% --"/>
                     <meta-data android:name="android.app.libs_prefix" android:value="/data/local/tmp/qt/"/>
-                    <meta-data android:name="android.app.load_local_libs_resource_id" android:resource="@array/load_local_libs"/>
                     <meta-data android:name="android.app.load_local_libs" android:value="-- %%INSERT_LOCAL_LIBS%% --"/>
                     <meta-data android:name="android.app.load_local_jars" android:value="-- %%INSERT_LOCAL_JARS%% --"/>
                     <meta-data android:name="android.app.static_init_classes" android:value="-- %%INSERT_INIT_CLASSES%% --"/>
                     <!--  Messages maps -->
-                    <meta-data android:name="android.app.ministro_not_found_msg" android:value="@string/ministro_not_found_msg"/>
-                    <meta-data android:name="android.app.ministro_needed_msg" android:value="@string/ministro_needed_msg"/>
-                    <meta-data android:name="android.app.fatal_error_msg" android:value="@string/fatal_error_msg"/>
+                    <meta-data android:value="@string/fatal_error_msg" android:name="android.app.fatal_error_msg"/>
+                    <meta-data android:value="@string/unsupported_android_version" android:name="android.app.unsupported_android_version"/>
+
                 </service>
                 <activity android:name=".SplashActivity"
                           android:label="Crumpet"
@@ -54,24 +54,26 @@
                                 <category android:name="android.intent.category.LAUNCHER"/>
                         </intent-filter>
                         -->
+                        <!-- Splash screen -->
+                        <meta-data android:name="android.app.splash_screen_drawable" android:resource="@drawable/digitail"/>
+
                         <meta-data android:name="android.app.lib_name" android:value="digitail"/>
-                        <meta-data android:name="android.app.qt_sources_resource_id" android:resource="@array/qt_sources"/>
                         <meta-data android:name="android.app.repository" android:value="default"/>
                         <meta-data android:name="android.app.qt_libs_resource_id" android:resource="@array/qt_libs"/>
                         <meta-data android:name="android.app.bundled_libs_resource_id" android:resource="@array/bundled_libs"/>
+
                         <!-- Deploy Qt libs as part of package -->
                         <meta-data android:name="android.app.bundle_local_qt_libs" android:value="-- %%BUNDLE_LOCAL_QT_LIBS%% --"/>
+                        <meta-data android:name="android.app.load_local_libs_resource_id" android:resource="@array/load_local_libs"/>
                         <!-- Run with local libs -->
                         <meta-data android:name="android.app.use_local_qt_libs" android:value="-- %%USE_LOCAL_QT_LIBS%% --"/>
                         <meta-data android:name="android.app.libs_prefix" android:value="/data/local/tmp/qt/"/>
-                    <meta-data android:name="android.app.load_local_libs_resource_id" android:resource="@array/load_local_libs"/>
                         <meta-data android:name="android.app.load_local_libs" android:value="-- %%INSERT_LOCAL_LIBS%% --"/>
                         <meta-data android:name="android.app.load_local_jars" android:value="-- %%INSERT_LOCAL_JARS%% --"/>
                         <meta-data android:name="android.app.static_init_classes" android:value="-- %%INSERT_INIT_CLASSES%% --"/>
                         <!--  Messages maps -->
-                        <meta-data android:name="android.app.ministro_not_found_msg" android:value="@string/ministro_not_found_msg"/>
-                        <meta-data android:name="android.app.ministro_needed_msg" android:value="@string/ministro_needed_msg"/>
-                        <meta-data android:name="android.app.fatal_error_msg" android:value="@string/fatal_error_msg"/>
+                        <meta-data android:value="@string/fatal_error_msg" android:name="android.app.fatal_error_msg"/>
+                        <meta-data android:value="@string/unsupported_android_version" android:name="android.app.unsupported_android_version"/>
                 </activity>
         </application>
         <supports-screens android:anyDensity="true" android:normalScreens="true" android:smallScreens="true" android:largeScreens="true"/>
