Reintroduce requesting the fine locatio check, because Qt still wants it

--- a/data/AndroidManifest.xml
+++ b/data/AndroidManifest.xml
@@ -80,7 +80,9 @@
         <uses-permission android:name="android.permission.INTERNET" />
         <uses-permission android:name="android.permission.BLUETOOTH" android:maxSdkVersion="30" />
         <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" android:maxSdkVersion="30" />
-        <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" android:maxSdkVersion="30" />
+        <!-- uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" android:maxSdkVersion="30" / -->
+        <!-- Hopefully the item below can be removed in favour of the above one at some point, once Qt handles this a touch more gracefully... -->
+        <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"  android:usesPermissionFlags="neverForLocation" />
         <uses-permission android:name="android.permission.BLUETOOTH_SCAN" android:usesPermissionFlags="neverForLocation" />
         <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" android:usesPermissionFlags="neverForLocation" />
         <uses-permission android:name="android.permission.WAKE_LOCK" />
