Just the commented-out notifications permission, see previous commit

--- a/data/AndroidManifest.xml
+++ b/data/AndroidManifest.xml
@@ -87,6 +87,7 @@
         <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" android:usesPermissionFlags="neverForLocation" />
         <uses-permission android:name="android.permission.WAKE_LOCK" />
         <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+        <!-- uses-permission android:name="android.permission.POST_NOTIFICATIONS" / -->
         <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
         <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
